Gemaakt met Colab

--- a/final_project_tm/nerc_bert.ipynb
+++ b/final_project_tm/nerc_bert.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jkama4/project_text_mining/blob/jayden-branch/final_project_tm/nerc_bert.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "35a5a47f",
       "metadata": {
         "id": "35a5a47f"
@@ -26,11 +16,11 @@
         "!pip install seqeval"
       ],
       "metadata": {
-        "id": "sRuoL-5sosQa",
-        "outputId": "6753a997-5d55-48dd-8fda-a37284cfdce2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sRuoL-5sosQa",
+        "outputId": "6753a997-5d55-48dd-8fda-a37284cfdce2"
       },
       "id": "sRuoL-5sosQa",
       "execution_count": 149,
@@ -524,11 +514,11 @@
         "print(tokenized_dataset[0])"
       ],
       "metadata": {
-        "id": "bcq-C_yIUR3P",
-        "outputId": "3c75b7ff-86e2-4f9f-ea47-f78ef89ea32f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bcq-C_yIUR3P",
+        "outputId": "3c75b7ff-86e2-4f9f-ea47-f78ef89ea32f"
       },
       "id": "bcq-C_yIUR3P",
       "execution_count": 110,
@@ -939,12 +929,12 @@
         "test_df.head()"
       ],
       "metadata": {
-        "id": "b0c0UpPrk69x",
-        "outputId": "93323e73-70c6-4a0b-b7c2-e72fc31adbfd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "b0c0UpPrk69x",
+        "outputId": "93323e73-70c6-4a0b-b7c2-e72fc31adbfd"
       },
       "id": "b0c0UpPrk69x",
       "execution_count": 137,
@@ -1319,8 +1309,6 @@
         ")\n"
       ],
       "metadata": {
-        "id": "k5SSNW85lTar",
-        "outputId": "6402c5c4-f78e-4fca-c61f-e01e0b33e9e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -1337,7 +1325,9 @@
             "1ad13ad51be34d6d98b26035952ef6b0",
             "0dabff0f81cd4a2dba077bd8794f730c"
           ]
-        }
+        },
+        "id": "k5SSNW85lTar",
+        "outputId": "6402c5c4-f78e-4fca-c61f-e01e0b33e9e2"
       },
       "id": "k5SSNW85lTar",
       "execution_count": 144,
@@ -1364,11 +1354,11 @@
         "tokenized_test_dataset"
       ],
       "metadata": {
-        "id": "CeRbZakflaez",
-        "outputId": "ecd416da-77fe-4175-b3d4-aa8bd8e041b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CeRbZakflaez",
+        "outputId": "ecd416da-77fe-4175-b3d4-aa8bd8e041b7"
       },
       "id": "CeRbZakflaez",
       "execution_count": 145,
@@ -1443,11 +1433,11 @@
         ")"
       ],
       "metadata": {
-        "id": "qawv5U-Fo1jM",
-        "outputId": "4b5173c8-1a92-4ee8-a829-8a2d1aba4246",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qawv5U-Fo1jM",
+        "outputId": "4b5173c8-1a92-4ee8-a829-8a2d1aba4246"
       },
       "id": "qawv5U-Fo1jM",
       "execution_count": 155,
@@ -1469,12 +1459,12 @@
         "print(results)"
       ],
       "metadata": {
-        "id": "LmU_Etrto7YZ",
-        "outputId": "ee0faf27-f114-4788-c541-9eb3a0b2df05",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 144
-        }
+        },
+        "id": "LmU_Etrto7YZ",
+        "outputId": "ee0faf27-f114-4788-c541-9eb3a0b2df05"
       },
       "id": "LmU_Etrto7YZ",
       "execution_count": 156,
@@ -1533,12 +1523,12 @@
         "    print(\"-\" * 50)\n"
       ],
       "metadata": {
-        "id": "IAa-gM6ao9TI",
-        "outputId": "0480ae9f-198c-4cd2-bad6-9d977bea0277",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 384
-        }
+        },
+        "id": "IAa-gM6ao9TI",
+        "outputId": "0480ae9f-198c-4cd2-bad6-9d977bea0277"
       },
       "id": "IAa-gM6ao9TI",
       "execution_count": 157,
@@ -1611,8 +1601,7 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "accelerator": "GPU",
     "widgets": {
