Gemaakt met Colab

--- a/final_project_tm/nerc_bert.ipynb
+++ b/final_project_tm/nerc_bert.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/jkama4/project_text_mining/blob/jayden-branch/final_project_tm/nerc_bert.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "35a5a47f",
       "metadata": {
         "id": "35a5a47f"
@@ -23,7 +33,7 @@
         "outputId": "6753a997-5d55-48dd-8fda-a37284cfdce2"
       },
       "id": "sRuoL-5sosQa",
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,12 +246,12 @@
         "id": "oCVGqQo3Nlnz"
       },
       "id": "oCVGqQo3Nlnz",
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": null,
       "id": "70203816",
       "metadata": {
         "id": "70203816"
@@ -261,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "id": "62d65e3d",
       "metadata": {
         "id": "62d65e3d"
@@ -273,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": null,
       "id": "3df14fe3",
       "metadata": {
         "id": "3df14fe3"
@@ -285,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": null,
       "id": "755db51c",
       "metadata": {
         "id": "755db51c"
@@ -309,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": null,
       "id": "422dd546",
       "metadata": {
         "id": "422dd546"
@@ -321,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": null,
       "id": "8cae95c5",
       "metadata": {
         "id": "8cae95c5"
@@ -335,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": null,
       "id": "461f20d8",
       "metadata": {
         "id": "461f20d8"
@@ -372,7 +382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": null,
       "id": "c5602976",
       "metadata": {
         "colab": {
@@ -417,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": null,
       "id": "abbe4999",
       "metadata": {
         "id": "abbe4999"
@@ -432,7 +442,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": null,
       "id": "cdd9da54",
       "metadata": {
         "colab": {
@@ -457,7 +467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": null,
       "id": "69578503",
       "metadata": {
         "id": "69578503"
@@ -469,7 +479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": null,
       "id": "3ff0ac9f",
       "metadata": {
         "id": "3ff0ac9f"
@@ -493,7 +503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": null,
       "id": "5fba874b",
       "metadata": {
         "id": "5fba874b"
@@ -521,7 +531,7 @@
         "outputId": "3c75b7ff-86e2-4f9f-ea47-f78ef89ea32f"
       },
       "id": "bcq-C_yIUR3P",
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -534,7 +544,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": null,
       "id": "6b0c8bb8",
       "metadata": {
         "colab": {
@@ -729,7 +739,7 @@
         "outputId": "ca9a1a5a-7f71-48da-98fd-611664f68828"
       },
       "id": "kUdSawMeQoh2",
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -908,7 +918,7 @@
         "id": "qh966kTZjtnR"
       },
       "id": "qh966kTZjtnR",
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -920,7 +930,7 @@
         "id": "pWfDCJBBk01U"
       },
       "id": "pWfDCJBBk01U",
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -937,7 +947,7 @@
         "outputId": "93323e73-70c6-4a0b-b7c2-e72fc31adbfd"
       },
       "id": "b0c0UpPrk69x",
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1258,7 +1268,7 @@
         "id": "XWgPrdP1k84r"
       },
       "id": "XWgPrdP1k84r",
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1297,7 +1307,7 @@
         "id": "xF5d933Qnivg"
       },
       "id": "xF5d933Qnivg",
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1330,7 +1340,7 @@
         "outputId": "6402c5c4-f78e-4fca-c61f-e01e0b33e9e2"
       },
       "id": "k5SSNW85lTar",
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1361,7 +1371,7 @@
         "outputId": "ecd416da-77fe-4175-b3d4-aa8bd8e041b7"
       },
       "id": "CeRbZakflaez",
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1408,7 +1418,7 @@
         "id": "n_sUbPFqllWR"
       },
       "id": "n_sUbPFqllWR",
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1420,7 +1430,7 @@
         "id": "Hmv3QJnSolXC"
       },
       "id": "Hmv3QJnSolXC",
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1440,7 +1450,7 @@
         "outputId": "4b5173c8-1a92-4ee8-a829-8a2d1aba4246"
       },
       "id": "qawv5U-Fo1jM",
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1467,7 +1477,7 @@
         "outputId": "ee0faf27-f114-4788-c541-9eb3a0b2df05"
       },
       "id": "LmU_Etrto7YZ",
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1531,7 +1541,7 @@
         "outputId": "0480ae9f-198c-4cd2-bad6-9d977bea0277"
       },
       "id": "IAa-gM6ao9TI",
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1601,7 +1611,8 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "accelerator": "GPU",
     "widgets": {
