Created the sentiment model

--- a/final_project_tm/sentiment.ipynb
+++ b/final_project_tm/sentiment.ipynb
@@ -1,224 +1,245 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "ee82db11",
-   "metadata": {},
-   "source": [
-    "# Sentiment Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "328b50e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import csv\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "import utils\n",
-    "\n",
-    "from datasets import load_dataset, Dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "066679fa",
-   "metadata": {},
-   "source": [
-    "Link to dataset: http://huggingface.co/datasets/stanfordnlp/sst2/viewer/default/train?row=2&views%5B%5D=train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "a58a77de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentiment_train_data_raw = load_dataset(\"stanfordnlp/sst2\", trust_remote_code=True, split=\"train\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "0530faab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentiment_train_data_file = r\"C:\\Users\\jayde\\OneDrive\\School\\Text Mining for AI\\final_project_tm\\data\\train_data\\sentiment-train.tsv\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "cb929223",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sentiment_data_to_file(raw_data: Dataset = sentiment_train_data_raw, file_name: str = sentiment_train_data_file):\n",
-    "    with open(file_name, \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
-    "        writer: csv.writer = csv.writer(f, delimiter=\"\\t\")\n",
-    "        writer.writerow([\"sentence_id\", \"sentence\", \"sentiment\"])\n",
-    "        \n",
-    "        for idx, elem in enumerate(raw_data):\n",
-    "            sentence = elem[\"sentence\"]\n",
-    "            label = \"positive\" if elem[\"label\"] == 1 else \"negative\"\n",
-    "            \n",
-    "            writer.writerow([idx, sentence, label])\n",
-    "        \n",
-    "    f.close()        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c17a32c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "utils.sentiment_data_to_file(raw_data=sentiment_train_data_raw, file_name=sentiment_train_data_file)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5b42efdd",
-   "metadata": {},
-   "source": [
-    "Call the following to convert the data to a CSV file:\n",
-    "\n",
-    "```python\n",
-    "utils.sentiment_data_to_file(raw_data, file_name)\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "11e26800",
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sentence_id</th>\n",
-       "      <th>sentence</th>\n",
-       "      <th>sentiment</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>hide new secretions from the parental units</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>contains no wit , only labored gags</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>that loves its characters and communicates som...</td>\n",
-       "      <td>positive</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>remains utterly satisfied to remain the same t...</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>on the worst revenge-of-the-nerds clichés the ...</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   sentence_id                                           sentence sentiment\n",
-       "0            0       hide new secretions from the parental units   negative\n",
-       "1            1               contains no wit , only labored gags   negative\n",
-       "2            2  that loves its characters and communicates som...  positive\n",
-       "3            3  remains utterly satisfied to remain the same t...  negative\n",
-       "4            4  on the worst revenge-of-the-nerds clichés the ...  negative"
+      "cell_type": "markdown",
+      "id": "ee82db11",
+      "metadata": {
+        "id": "ee82db11"
+      },
+      "source": [
+        "# Sentiment Analysis"
       ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "aTxo1v-6omad"
+      },
+      "id": "aTxo1v-6omad",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a58a77de",
+      "metadata": {
+        "id": "a58a77de"
+      },
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "splits = {'train': 'train_df.csv', 'validation': 'val_df.csv', 'test': 'test_df.csv'}\n",
+        "dataframes = []\n",
+        "for split, filename in splits.items():\n",
+        "    if filename != 'val_df.csv':\n",
+        "      df = pd.read_csv(f'hf://datasets/Sp1786/multiclass-sentiment-analysis-dataset/{filename}')\n",
+        "      df.drop('id', axis=1, inplace=True)\n",
+        "      dataframes.append(df)\n",
+        "    else:\n",
+        "      test_df = pd.read_csv(f'hf://datasets/Sp1786/multiclass-sentiment-analysis-dataset/{filename}')\n",
+        "      test_df.drop('id', axis=1, inplace=True)\n",
+        "train_df = pd.concat(dataframes)\n",
+        "train_df = train_df.dropna()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(train_df.head())\n",
+        "print(test_df.head())\n",
+        "\n",
+        "print(len(train_df))\n",
+        "print(len(test_df))"
+      ],
+      "metadata": {
+        "id": "Zw49r1HZOksT"
+      },
+      "id": "Zw49r1HZOksT",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "id": "e9af5349",
+      "metadata": {
+        "id": "e9af5349"
+      },
+      "source": [
+        "## Train the Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "from datasets import Dataset\n",
+        "from transformers import AutoTokenizer\n",
+        "\n",
+        "# Initialize the BERT tokenizer\n",
+        "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+        "\n",
+        "def tokenize_function(examples):\n",
+        "    return tokenizer(examples[\"text\"], padding=\"max_length\", truncation=True, max_length=128)\n",
+        "\n",
+        "train_dataset = Dataset.from_pandas(train_df)\n",
+        "test_dataset = Dataset.from_pandas(test_df)\n",
+        "\n",
+        "train_tokenized = train_dataset.map(tokenize_function, batched=True)\n",
+        "test_tokenized = test_dataset.map(tokenize_function, batched=True)"
+      ],
+      "metadata": {
+        "id": "GLda_7q4XWkK"
+      },
+      "id": "GLda_7q4XWkK",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(train_tokenized)"
+      ],
+      "metadata": {
+        "id": "FdrgJA8eijz9"
+      },
+      "id": "FdrgJA8eijz9",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import TrainingArguments\n",
+        "\n",
+        "# Define training arguments\n",
+        "training_args = TrainingArguments(\n",
+        "    eval_strategy=\"epoch\",           # Evaluate at the end of each epoch\n",
+        "    learning_rate=5e-5,              # Start with a small learning rate\n",
+        "    per_device_train_batch_size=32,  # Batch size per GPU\n",
+        "    per_device_eval_batch_size=32,\n",
+        "    num_train_epochs=3,              # Number of epochs\n",
+        "    weight_decay=0.01,               # Regularization\n",
+        "    logging_steps=100,               # Log every 100 steps\n",
+        "    fp16=True                        # Enable mixed precision for faster training\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "w9CZVdZSdfB9"
+      },
+      "id": "w9CZVdZSdfB9",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install evaluate"
+      ],
+      "metadata": {
+        "id": "pVmgXjK1esZ3"
+      },
+      "id": "pVmgXjK1esZ3",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import Trainer\n",
+        "from evaluate import load\n",
+        "\n",
+        "# Load a metric (F1-score in this case)\n",
+        "metric = load(\"f1\")\n",
+        "\n",
+        "# Define a custom compute_metrics function\n",
+        "def compute_metrics(eval_pred):\n",
+        "    logits, labels = eval_pred\n",
+        "    predictions = logits.argmax(axis=-1)\n",
+        "    return metric.compute(predictions=predictions, references=labels, average='weighted')"
+      ],
+      "metadata": {
+        "id": "x6iV6aeVd3fy"
+      },
+      "id": "x6iV6aeVd3fy",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import DataCollatorWithPadding\n",
+        "from transformers import AutoModelForSequenceClassification\n",
+        "\n",
+        "data_collator = DataCollatorWithPadding(tokenizer=tokenizer)\n",
+        "model_name = \"bert-base-uncased\"\n",
+        "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=3)"
+      ],
+      "metadata": {
+        "id": "PDIGQQtaeqDY"
+      },
+      "id": "PDIGQQtaeqDY",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "trainer = Trainer(\n",
+        "    model=model,                        # Pre-trained BERT model\n",
+        "    args=training_args,                 # Training arguments\n",
+        "    train_dataset=train_tokenized,\n",
+        "    eval_dataset=test_tokenized,\n",
+        "    tokenizer=tokenizer,\n",
+        "    data_collator=data_collator,        # Efficient batching\n",
+        "    compute_metrics=compute_metrics,     # Custom metric\n",
+        ")\n",
+        "\n",
+        "trainer.train()"
+      ],
+      "metadata": {
+        "id": "SAH9GDMNe8ik"
+      },
+      "id": "SAH9GDMNe8ik",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pGZIsQdFrbfl"
+      },
+      "id": "pGZIsQdFrbfl",
+      "execution_count": null,
+      "outputs": []
     }
-   ],
-   "source": [
-    "df: pd.DataFrame = pd.read_csv(sentiment_train_data_file, sep=\"\\t\")\n",
-    "df.head()"
-   ]
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.9"
+    },
+    "colab": {
+      "provenance": [],
+      "gpuType": "T4"
+    },
+    "accelerator": "GPU"
   },
-  {
-   "cell_type": "markdown",
-   "id": "e9af5349",
-   "metadata": {},
-   "source": [
-    "## Train the Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "47aa6625",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Next part ..."
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "text_mining_env_fixed",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.9"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
