Final Update Sentiment

--- a/final_project_tm/sentiment.ipynb
+++ b/final_project_tm/sentiment.ipynb
@@ -12,16 +12,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "aTxo1v-6omad"
-      },
-      "id": "aTxo1v-6omad",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "execution_count": 1,
       "id": "a58a77de",
       "metadata": {
@@ -53,11 +43,11 @@
         "for split, filename in splits.items():\n",
         "    if filename != 'val_df.csv':\n",
         "      df = pd.read_csv(f'hf://datasets/Sp1786/multiclass-sentiment-analysis-dataset/{filename}')\n",
-        "      df.drop(['id', 'sentiment'], axis=1, inplace=True)\n",
+        "      df.drop(['id', 'label'], axis=1, inplace=True)\n",
         "      dataframes.append(df)\n",
         "    else:\n",
         "      test_df = pd.read_csv(f'hf://datasets/Sp1786/multiclass-sentiment-analysis-dataset/{filename}')\n",
-        "      test_df.drop(['id', 'sentiment'], axis=1, inplace=True)\n",
+        "      test_df.drop(['id', 'label'], axis=1, inplace=True)\n",
         "train_df = pd.concat(dataframes)\n",
         "train_df = train_df.dropna()"
       ]
@@ -266,7 +256,7 @@
         "model_args.reprocess_input_data=True\n",
         "model_args.manual_seed=4\n",
         "model_args.use_multiprocessing=True\n",
-        "model_args.labels_list=[0, 1, 2]\n",
+        "model_args.labels_list=[\"neutral\", \"positive\", \"negative\"]\n",
         "model_args.wandb_project=\"Sentiment Analysis Sweep\""
       ],
       "metadata": {
@@ -292,34 +282,6 @@
       "id": "19pd6-99tyLJ",
       "execution_count": 5,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!wandb login --relogin"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "XVeWmdBFwM7q",
-        "outputId": "52bdcfaa-7f58-4db4-ec6b-ee877047ab51"
-      },
-      "id": "XVeWmdBFwM7q",
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[34m\u001b[1mwandb\u001b[0m: Logging into wandb.ai. (Learn how to deploy a W&B server locally: https://wandb.me/wandb-server)\n",
-            "\u001b[34m\u001b[1mwandb\u001b[0m: You can find your API key in your browser here: https://wandb.ai/authorize?ref=models\n",
-            "\u001b[34m\u001b[1mwandb\u001b[0m: Paste an API key from your profile and hit enter, or press ctrl+c to quit: \n",
-            "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n",
-            "\u001b[34m\u001b[1mwandb\u001b[0m: W&B API key is configured. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -3263,7 +3225,7 @@
             "_view_module": "@jupyter-widgets/controls",
             "_view_module_version": "1.5.0",
             "_view_name": "ProgressView",
-            "bar_style": "",
+            "bar_style": "danger",
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_e85e61438be3437db05b9d91eb6c9525",
@@ -3292,7 +3254,7 @@
             "layout": "IPY_MODEL_15fd5f7866f3453fbef2fcf98ab26733",
             "placeholder": "​",
             "style": "IPY_MODEL_e3f3a0edc3a74a108ec32556b54ccade",
-            "value": " 0/1 [00:00&lt;?, ?it/s]"
+            "value": " 0/1 [01:13&lt;?, ?it/s]"
           }
         },
         "23829d673f4e437393485d415bfb00c0": {
@@ -3605,7 +3567,7 @@
             "_view_module": "@jupyter-widgets/controls",
             "_view_module_version": "1.5.0",
             "_view_name": "ProgressView",
-            "bar_style": "",
+            "bar_style": "danger",
             "description": "",
             "description_tooltip": null,
             "layout": "IPY_MODEL_e23d7e0ea8ac4726b8b865e4ff3541ee",
@@ -3634,7 +3596,7 @@
             "layout": "IPY_MODEL_3ac8b297e5b64802aeea5cb96af23095",
             "placeholder": "​",
             "style": "IPY_MODEL_65517ee8b9234abda04e96a47a7f2c4e",
-            "value": " 95/2278 [00:54&lt;07:08,  5.10it/s]"
+            "value": " 95/2278 [01:12&lt;07:08,  5.10it/s]"
           }
         },
         "194148b5a36441dfa1e1dc690b1823ad": {
