Final Final sentiment

--- a/final_project_tm/sentiment.ipynb
+++ b/final_project_tm/sentiment.ipynb
@@ -257,7 +257,7 @@
         "model_args.manual_seed=4\n",
         "model_args.use_multiprocessing=True\n",
         "model_args.labels_list=[\"neutral\", \"positive\", \"negative\"]\n",
-        "model_args.wandb_project=\"Sentiment Analysis Sweep\""
+        "model_args.wandb_project=\"Sentiment-Analysis-Sweep\""
       ],
       "metadata": {
         "id": "pGZIsQdFrbfl"
@@ -301,9 +301,9 @@
         "sweep_id = None if sweep_id == \"\" else sweep_id\n",
         "\n",
         "if sweep_id is None:\n",
-        "\tsweep_id = wandb.sweep(sweep=sweep_configuration, project=\"Sentiment Analysis Sweep\")\n",
+        "\tsweep_id = wandb.sweep(sweep=sweep_configuration, project=\"Sentiment-Analysis-Sweep\")\n",
         "\n",
-        "wandb.agent(sweep_id, function=train_model)"
+        "wandb.agent(sweep_id, function=train_model, project='Sentiment-Analysis-Sweep')"
       ],
       "metadata": {
         "colab": {
