Final version of topic classification. Have not yet checked for bugs

--- a/final_project_tm/topic.ipynb
+++ b/final_project_tm/topic.ipynb
@@ -7009,6 +7009,87 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "eval_df = pd.read_csv('./sentiment-topic-test.tsv', sep='\\t')\n",
+        "eval_df = eval_df.dropna()\n",
+        "eval_df.drop(['sentence_id', 'sentiment'], axis=1, inplace=True)\n",
+        "eval_df.columns = ['question', 'category']\n",
+        "eval_categories = eval_df['category'].unique()\n",
+        "possible_topics = list(set(list(possible_topics.append(eval_categories))))\n",
+        "\n",
+        "best_model_args.num_train_epochs=16\n",
+        "best_model_args.train_batch_size=64\n",
+        "best_model_args.learning_rate=5e-5\n",
+        "\n",
+        "best_model = ClassificationModel(\"distilbert\", \"distilbert-base-uncased\", num_labels=len(possible_topics), args=best_model_args, use_cuda=True)"
+      ],
+      "metadata": {
+        "id": "tQ4UP0dKG0lo"
+      },
+      "id": "tQ4UP0dKG0lo",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from simpletransformers.classification import ClassificationModel, ClassificationArgs\n",
+        "\n",
+        "best_model_args = ClassificationArgs()\n",
+        "\n",
+        "best_model_args.overwrite_output_dir=True\n",
+        "best_model_args.evaluate_during_training=True\n",
+        "best_model_args.no_save = True\n",
+        "\n",
+        "best_model_args.max_seq_length=256\n",
+        "best_model_args.use_early_stopping=True\n",
+        "best_model_args.early_stopping_delta=0.01\n",
+        "best_model_args.early_stopping_metric='eval_loss'\n",
+        "best_model_args.early_stopping_metric_minimize=True\n",
+        "best_model_args.early_stopping_patience=2\n",
+        "best_model_args.evaluate_during_training_steps=32\n",
+        "best_model_args.reprocess_input_data=True\n",
+        "best_model_args.manual_seed=25\n",
+        "best_model_args.use_multiprocessing=True\n",
+        "best_model_args.labels_list=possible_topics"
+      ],
+      "metadata": {
+        "id": "MEU7iOsXGiAS"
+      },
+      "id": "MEU7iOsXGiAS",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "best_model.train_model(pd.concat([train_df, test_df]), eval_df=eval_df)"
+      ],
+      "metadata": {
+        "id": "a9W-oWPcIRJ9"
+      },
+      "id": "a9W-oWPcIRJ9",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "predict, probabilities = best_model.predict(eval_df['text'].tolist())\n",
+        "eval_df['predicted'] = predict\n",
+        "print(classification_report(eval_df['sentiment'], eval_df['predicted']))"
+      ],
+      "metadata": {
+        "id": "Bn2cbN8uIbSI"
+      },
+      "id": "Bn2cbN8uIbSI",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
