Topic Classification final version before bug fixing. Hyperparameters have been checked.

--- a/final_project_tm/topic.ipynb
+++ b/final_project_tm/topic.ipynb
@@ -158,19 +158,27 @@
         "eval_df = eval_df.dropna()\n",
         "eval_df.drop(['sentence_id', 'sentiment'], axis=1, inplace=True)\n",
         "eval_df.columns = ['question', 'category']\n",
+        "eval_df['category'] = eval_df['category'].replace({'book': 'books', 'movie': 'movies'})\n",
         "eval_categories = eval_df['category'].unique()\n",
-        "possible_topics = list(set(list(possible_topics.append(eval_categories))))\n",
-        "\n",
-        "best_model_args.num_train_epochs=16\n",
-        "best_model_args.train_batch_size=64\n",
-        "best_model_args.learning_rate=5e-5\n",
-        "\n",
-        "best_model = ClassificationModel(\"distilbert\", \"distilbert-base-uncased\", num_labels=len(possible_topics), args=best_model_args, use_cuda=True)"
+        "possible_topics = list(set(possible_topics_test) | set(eval_categories) | set(possible_topics_train))"
       ],
       "metadata": {
         "id": "tQ4UP0dKG0lo"
       },
       "id": "tQ4UP0dKG0lo",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(possible_topics)\n",
+        "print(len(possible_topics))"
+      ],
+      "metadata": {
+        "id": "j39XHESSmDeA"
+      },
+      "id": "j39XHESSmDeA",
       "execution_count": null,
       "outputs": []
     },
@@ -207,6 +215,22 @@
     {
       "cell_type": "code",
       "source": [
+        "best_model_args.num_train_epochs=16\n",
+        "best_model_args.train_batch_size=64\n",
+        "best_model_args.learning_rate=5e-5\n",
+        "\n",
+        "best_model = ClassificationModel(\"distilbert\", \"distilbert-base-uncased\", num_labels=len(possible_topics), args=best_model_args, use_cuda=True)"
+      ],
+      "metadata": {
+        "id": "RfBhAcQZoNsu"
+      },
+      "id": "RfBhAcQZoNsu",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "best_model.train_model(pd.concat([train_df, test_df]), eval_df=eval_df)"
       ],
       "metadata": {
@@ -221,7 +245,7 @@
       "source": [
         "from sklearn.metrics import classification_report\n",
         "\n",
-        "predict, probabilities = best_model.predict(eval_df['text'].tolist())\n",
+        "predict, probabilities = best_model.predict(eval_df['question'].tolist())\n",
         "eval_df['predicted'] = predict\n",
         "print(classification_report(eval_df['sentiment'], eval_df['predicted']))"
       ],
@@ -251,10 +275,8 @@
       "version": "3.12.9"
     },
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "accelerator": "GPU"
+      "provenance": []
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 5
