--- a/final_project_tm/sentiment.ipynb
+++ b/final_project_tm/sentiment.ipynb
@@ -1,224 +1,257 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "ee82db11",
-   "metadata": {},
-   "source": [
-    "# Sentiment Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "328b50e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import csv\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "import utils\n",
-    "\n",
-    "from datasets import load_dataset, Dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "066679fa",
-   "metadata": {},
-   "source": [
-    "Link to dataset: http://huggingface.co/datasets/stanfordnlp/sst2/viewer/default/train?row=2&views%5B%5D=train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "a58a77de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentiment_train_data_raw = load_dataset(\"stanfordnlp/sst2\", trust_remote_code=True, split=\"train\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "0530faab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentiment_train_data_file = r\"C:\\Users\\jayde\\OneDrive\\School\\Text Mining for AI\\final_project_tm\\data\\train_data\\sentiment-train.tsv\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "cb929223",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sentiment_data_to_file(raw_data: Dataset = sentiment_train_data_raw, file_name: str = sentiment_train_data_file):\n",
-    "    with open(file_name, \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
-    "        writer: csv.writer = csv.writer(f, delimiter=\"\\t\")\n",
-    "        writer.writerow([\"sentence_id\", \"sentence\", \"sentiment\"])\n",
-    "        \n",
-    "        for idx, elem in enumerate(raw_data):\n",
-    "            sentence = elem[\"sentence\"]\n",
-    "            label = \"positive\" if elem[\"label\"] == 1 else \"negative\"\n",
-    "            \n",
-    "            writer.writerow([idx, sentence, label])\n",
-    "        \n",
-    "    f.close()        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c17a32c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "utils.sentiment_data_to_file(raw_data=sentiment_train_data_raw, file_name=sentiment_train_data_file)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5b42efdd",
-   "metadata": {},
-   "source": [
-    "Call the following to convert the data to a CSV file:\n",
-    "\n",
-    "```python\n",
-    "utils.sentiment_data_to_file(raw_data, file_name)\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "11e26800",
-   "metadata": {},
-   "outputs": [
+  "cells": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sentence_id</th>\n",
-       "      <th>sentence</th>\n",
-       "      <th>sentiment</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>hide new secretions from the parental units</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>contains no wit , only labored gags</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>that loves its characters and communicates som...</td>\n",
-       "      <td>positive</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>remains utterly satisfied to remain the same t...</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>on the worst revenge-of-the-nerds clichés the ...</td>\n",
-       "      <td>negative</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   sentence_id                                           sentence sentiment\n",
-       "0            0       hide new secretions from the parental units   negative\n",
-       "1            1               contains no wit , only labored gags   negative\n",
-       "2            2  that loves its characters and communicates som...  positive\n",
-       "3            3  remains utterly satisfied to remain the same t...  negative\n",
-       "4            4  on the worst revenge-of-the-nerds clichés the ...  negative"
+      "cell_type": "markdown",
+      "id": "ee82db11",
+      "metadata": {
+        "id": "ee82db11"
+      },
+      "source": [
+        "# Sentiment Analysis"
       ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a58a77de",
+      "metadata": {
+        "id": "a58a77de"
+      },
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "splits = {'train': 'train_df.csv', 'validation': 'val_df.csv', 'test': 'test_df.csv'}\n",
+        "dataframes = []\n",
+        "for split, filename in splits.items():\n",
+        "    if filename != 'val_df.csv':\n",
+        "      df = pd.read_csv(f'hf://datasets/Sp1786/multiclass-sentiment-analysis-dataset/{filename}')\n",
+        "      df.drop(['id', 'label'], axis=1, inplace=True)\n",
+        "      dataframes.append(df)\n",
+        "    else:\n",
+        "      test_df = pd.read_csv(f'hf://datasets/Sp1786/multiclass-sentiment-analysis-dataset/{filename}')\n",
+        "      test_df.drop(['id', 'label'], axis=1, inplace=True)\n",
+        "train_df = pd.concat(dataframes)\n",
+        "train_df = train_df.dropna()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(train_df.head())\n",
+        "print(test_df.head())\n",
+        "\n",
+        "print(len(train_df))\n",
+        "print(len(test_df))"
+      ],
+      "metadata": {
+        "id": "Zw49r1HZOksT"
+      },
+      "id": "Zw49r1HZOksT",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "id": "e9af5349",
+      "metadata": {
+        "id": "e9af5349"
+      },
+      "source": [
+        "## Train the Model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install simpletransformers"
+      ],
+      "metadata": {
+        "id": "g13M7TpGuc2c"
+      },
+      "id": "g13M7TpGuc2c",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from simpletransformers.classification import ClassificationModel, ClassificationArgs\n",
+        "\n",
+        "model_args = ClassificationArgs()\n",
+        "\n",
+        "model_args.overwrite_output_dir=True\n",
+        "model_args.evaluate_during_training=True\n",
+        "model_args.no_save = True\n",
+        "\n",
+        "model_args.max_seq_length=256\n",
+        "model_args.use_early_stopping=True\n",
+        "model_args.early_stopping_delta=0.01\n",
+        "model_args.early_stopping_metric='eval_loss'\n",
+        "model_args.early_stopping_metric_minimize=True\n",
+        "model_args.early_stopping_patience=2\n",
+        "model_args.evaluate_during_training_steps=32\n",
+        "model_args.reprocess_input_data=True\n",
+        "model_args.manual_seed=4\n",
+        "model_args.use_multiprocessing=True\n",
+        "model_args.labels_list=[\"neutral\", \"positive\", \"negative\"]\n",
+        "model_args.wandb_project=\"Sentiment-Analysis-Sweep\""
+      ],
+      "metadata": {
+        "id": "pGZIsQdFrbfl"
+      },
+      "id": "pGZIsQdFrbfl",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import wandb\n",
+        "\n",
+        "def train_model():\n",
+        "  wandb.init()\n",
+        "  model = ClassificationModel(\"roberta\", \"roberta-base\", num_labels=3, args=model_args, use_cuda=True, sweep_config=wandb.config)\n",
+        "  model.train_model(train_df, eval_df=test_df)"
+      ],
+      "metadata": {
+        "id": "19pd6-99tyLJ"
+      },
+      "id": "19pd6-99tyLJ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wandb.login()\n",
+        "\n",
+        "sweep_configuration = {\n",
+        "\t\"method\": \"grid\",\n",
+        "\t\"metric\": {\"goal\": \"minimize\", \"name\": \"eval_loss\"},\n",
+        "\t\"parameters\": {\n",
+        "\t\t\"train_epochs\": {\"values\": [8, 10, 12, 16]},\n",
+        "\t\t\"train_batch_size\": {\"values\": [16, 32, 64]},\n",
+        "\t\t\"learning_rate\": {\"values\": [1e-6, 5e-5, 1e-5, 5e-4]},\n",
+        "\t}\n",
+        "}\n",
+        "sweep_id = input(\"Please enter an existing sweep id if you want to continue an existing sweep (leave blank for a new sweep): \")\n",
+        "sweep_id = None if sweep_id == \"\" else sweep_id\n",
+        "\n",
+        "if sweep_id is None:\n",
+        "\tsweep_id = wandb.sweep(sweep=sweep_configuration, project=\"Sentiment-Analysis-Sweep\")\n",
+        "\n",
+        "wandb.agent(sweep_id, function=train_model, project='Sentiment-Analysis-Sweep')"
+      ],
+      "metadata": {
+        "id": "BIDyh5rCtl47"
+      },
+      "id": "BIDyh5rCtl47",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "best_model_args = ClassificationArgs()\n",
+        "\n",
+        "best_model_args.overwrite_output_dir=True\n",
+        "best_model_args.evaluate_during_training=True\n",
+        "best_model_args.no_save = True\n",
+        "\n",
+        "best_model_args.max_seq_length=256\n",
+        "best_model_args.use_early_stopping=True\n",
+        "best_model_args.early_stopping_delta=0.01\n",
+        "best_model_args.early_stopping_metric='eval_loss'\n",
+        "best_model_args.early_stopping_metric_minimize=True\n",
+        "best_model_args.early_stopping_patience=2\n",
+        "best_model_args.evaluate_during_training_steps=32\n",
+        "best_model_args.reprocess_input_data=True\n",
+        "best_model_args.manual_seed=25\n",
+        "best_model_args.use_multiprocessing=True\n",
+        "best_model_args.labels_list=[\"neutral\", \"positive\", \"negative\"]\n"
+      ],
+      "metadata": {
+        "id": "x1SqKX2ESJvG"
+      },
+      "id": "x1SqKX2ESJvG",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "eval_df = pd.read_csv('./sentiment-topic-test.tsv', sep='\\t')\n",
+        "eval_df = eval_df.dropna()\n",
+        "eval_df.drop(['sentence_id', 'topic'], axis=1, inplace=True)\n",
+        "eval_df.columns = ['text', 'sentiment']\n",
+        "print(eval_df.head())\n",
+        "\n",
+        "best_model_args.num_train_epochs=16\n",
+        "best_model_args.train_batch_size=64\n",
+        "best_model_args.learning_rate=5e-5\n",
+        "\n",
+        "best_model = ClassificationModel(\"roberta\", \"roberta-base\", num_labels=3, args=best_model_args, use_cuda=True)"
+      ],
+      "metadata": {
+        "id": "cMyBtW_4JJcK"
+      },
+      "id": "cMyBtW_4JJcK",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "best_model.train_model(pd.concat([train_df, test_df]), eval_df=eval_df)"
+      ],
+      "metadata": {
+        "id": "lA8TAIr8QqzT"
+      },
+      "id": "lA8TAIr8QqzT",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "predict, probabilities = best_model.predict(eval_df['text'].tolist())\n",
+        "eval_df['predicted'] = predict\n",
+        "print(classification_report(eval_df['sentiment'], eval_df['predicted']))"
+      ],
+      "metadata": {
+        "id": "3LdWqYMJMQjN"
+      },
+      "id": "3LdWqYMJMQjN",
+      "execution_count": null,
+      "outputs": []
     }
-   ],
-   "source": [
-    "df: pd.DataFrame = pd.read_csv(sentiment_train_data_file, sep=\"\\t\")\n",
-    "df.head()"
-   ]
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.9"
+    },
+    "colab": {
+      "provenance": [],
+      "gpuType": "T4"
+    },
+    "accelerator": "GPU"
   },
-  {
-   "cell_type": "markdown",
-   "id": "e9af5349",
-   "metadata": {},
-   "source": [
-    "## Train the Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "47aa6625",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Next part ..."
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "text_mining_env_fixed",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.9"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
